--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -305,7 +305,7 @@ float:left;width:22%;
 .navBarBottomRowUserBioOverlap{
     background-color: #777;
     position: relative;
-    top: -105px;
+    top: -130px;
     opacity: .8;
    // max-height: 94px;
     color: white;
@@ -313,19 +313,33 @@ float:left;width:22%;
     font-size: small;
     min-height: 100px;
 }
+.userTotalPoints{
+       font-weight: bold;
+    font-style: italic;
+    background: white;
+    padding: 4px;
+    border-radius: 6px;
+    width: 50px;
+    text-align: center;
+    margin-top: 2px;
+    padding-bottom: 3px;
+    border-right-style: dotted;
+    border-left-style: dotted;
+}
+
 .imgNavWrapper{
     margin-top:-35px
 }
 .navBarTopDiv{
-    background-color:#f3f3f3;
+    //background-color:#f3f3f3;
     z-index:1;
     position:relative;
     color:#565656;
     padding:5px;
     border-radius: 5px;
        
-	opacity: .8;
-	
+	//opacity: .8;
+	    background: rgba(243, 243, 243,.8);
 }
 #navBarWrapper{  
     background-color: white;
