--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -407,12 +407,12 @@ append body
 										.div.col-xs-4.col-sm-4.col-md-4.col-lg-4
 											span#navTipTitle(style='font-style: italic;background-color: white;padding: 5px;border-radius: 5px;opacity: 1;'){{user.userName}}
 										.div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-										.div.col-xs-1.col-sm-1.col-md-2.col-lg-1
+										.div.col-xs-3.col-sm-3.col-md-3.col-lg-3
 										.div.col-xs-1.col-sm-1.col-md-1.col-lg-1
-											span#navTipTitle(style='float:right'){{user.totalpoints}}
+											span.userTotalPoints(style='float:right'){{user.totalpoints}}
 										
 										
-								.div.row.animated.navBarBottomRow(ng-show='true' style='height:125px;margin-top:-20px')
+								.div.row.animated.navBarBottomRow(ng-show='true' style='height:125px;')
 									div.col-xs-6.col-sm-6.col-md-6.col-lg-6.imgNavWrapper(ng-show='user.profileImageJson.length > 0' style='padding:0px;height:125px')
 										img.thumbnail.hover.hidden-xs.col-sm-12.col-md-12.col-lg-12(ng-src='{{user.profileImageJson[0].image}}' style='min-height: 100px;margin-top:10px;padding:0px;')
 									div.col-xs-6.col-sm-6.col-md-6.col-lg-6.imgNavWrapper(ng-show='user.profileImageJson.length > 0' style='padding:0px;height:125px')
