--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -2,7 +2,7 @@ extends layout
 
 append body
 	.pageController(ng-controller="bodyTipHelperController" style = '' id='controllerDiv' )
-		.div.userDetailsDiv
+		.div.userDetailsDivTipLib
 			.div.username
 				span.greeting Hey there	
 				a(href='/profile/{{username}}'){{username}}!
