--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -327,6 +327,15 @@ a {
 .navBarBottomRowUserBioOverlap{
     background-color: rgba(119, 119, 119,.8);
     position: relative;
+    top: -130px;
+    color: white;
+    text-align: left;
+    font-size: small;
+    min-height: 100px;
+}
+.navBarBottomRowUserBioOverlapProfile{
+    background-color: rgba(119, 119, 119,.8);
+    position: relative;
     top: -110px;
     color: white;
     text-align: left;
