--- a/views/profile.jade
+++ b/views/profile.jade
@@ -94,7 +94,7 @@ append body
 					.div.profileDataWrapper.row()
 						//label.label-primary.metaDataLabel.col-sm-0.col-md-12.col-lg-12.col-xs-0
 								span Name: 
-						label.label-primary.metaDataDiv.col-sm-0.col-md-12.col-lg-12.col-xs-0
+						label.label-primary.metaDataDiv.col-sm-0.col-xs-0.col-md-12.col-lg-12
 							span
 								{{profileInfo.profileMetaDataJson.firstName}} 
 							span(style='margin-left:5px')
@@ -132,7 +132,7 @@ append body
 								span Facebook:	
 
 
-			.profilePageCenter.col-sm-8.col-md-8.col-lg-8.col-xs-8
+			.profilePageCenter.col-sm-9.col-md-9.col-lg-9.col-xs-9
 				.profileNotify(ng-show="!isLoggedIn()")
 				.profilePageBanner.contentWrapper(ng-show="isLoggedIn()" style='height: 300px;')
 					.div.row(ng-style="{'background-image': 'url(' + profileInfo.bannerImageJson[0].image + ')'}" style='background-size: cover;background-size: contain;height: 100%;')
@@ -420,7 +420,7 @@ append body
 										#submittedByDiv.small(style="padding-top:5px")
 											span Submitted By: 
 												a(href="/profile/{{submittedBy}}"){{submittedBy}}
-			.profilePageRightWrapper.col-xs-3.col-md-3.col-lg-3.col-xl-3
+			.profilePageRightWrapper.col-xs-2.col-md-2.col-lg-2.col-xl-2
 				//div.rightWidgetTopContainer.row(style='height:200px')
 					
 				#rightWidgetContainer.contentWrapper
