--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -368,7 +368,7 @@ append body
 				
 				.errorDiv(ng-bind="responseData")
 			#stickyaliasNavLeft
-			a.minimize(ng-click='toggleNavBarRight()') Toggle Nav
+			a.minimize(ng-click='toggleNavBarRight()') Hide/Show
 			#stickyheaderNavRight.col-xs-3.col-sm-3.col-md-3.col-lg-3(ng-show='navRightToggle')
 				#rightWidgetContainer.contentWrapper
 					.rightWidetWrapper#topTipsList(ng-hide='true')
